tests/compiler/jsxAttributeInFragment/index.tsx
< key="nope"></>
//~^ ERROR: Expression expected.
